--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ pre {
   float: left;
   pointer-events: none;
   user-select: none;
+  image-rendering: pixelated;
   image-rendering: -webkit-optimize-contrast;
   image-rendering: crisp-edges;
   -ms-interpolation-mode: nearest-neighbor;
