--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ body {
   line-height: 21px;
   color: var(--green1);
   z-index: -10;
+  height: auto;
   /*overscroll-behavior: none;*/
   /*background-image: url("../images/bg/background_yoki_2.png");
   background-repeat: repeat;
