--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,10 @@
     url("../fonts/DEP/DEP.woff") format("woff"),
     url("../fonts/DEP/DEP.woff2") format("woff2"),
     url("../fonts/DEP/DEP.otf") format("opentype"),
-    url(https://spiritaxolotl.github.io/fonts/DEP/DEP.ttf)format("truetype"),
-    url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff)format("woff"),
-    url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff2)format("woff2"),
-    url(https://spiritaxolotl.github.io/fonts/DEP/DEP.otf)format("opentype")
+    url(https://spax.zone/fonts/DEP/DEP.ttf)format("truetype"),
+    url(https://spax.zone/fonts/DEP/DEP.woff)format("woff"),
+    url(https://spax.zone/fonts/DEP/DEP.woff2)format("woff2"),
+    url(https://spax.zone/fonts/DEP/DEP.otf)format("opentype")
   ;
 }
 
