--- a/css/experimental.css
+++ b/css/experimental.css
@@ -42,11 +42,21 @@ body {
   align-items: center;
   gap: 5px;
   perspective: 550px;
-  background: repeat #306850 url("../images/bg/background_yoki.png");
   background-size: 960px;
   image-rendering: pixelated;
-  height: fit-content;
-  min-height: 100vh;
+/*   height: fit-content; */
+/*   min-height: 100vh; */
+  &::before{
+    display:block;
+    position:fixed;
+    width:100%;
+    height:100%;
+  background: repeat #306850 url("../images/bg/background_yoki.png") 960px;
+    transform:translateZ(-400px) scale(3);
+    content: '';
+    transform-style: flat;
+    z-index: -2
+  }
 }
 
 @supports (scrollbar-color: auto) {
