--- a/tests/animal-gender-bodypart/styles.css
+++ b/tests/animal-gender-bodypart/styles.css
@@ -1,7 +1,13 @@
 :root {
   --desaturated-yellow: rgb(35, 35, 0);
   --desaturated-red: rgb(34, 0, 0);
+  --color-notWhite: rgb(255 249 242);
+  --color-notBlack: rgb(25 25 25);
   --color-cherry: rgb(131 37 79);
+  --color-strawberry: rgb(229 107 111);
+  --color-mango: rgb(255 171 92);
+  --color-longan: rgb(255 216 168);
+  --black: rgba(0,0,0,0.2);
 }
 
 @font-face {
@@ -10,9 +16,32 @@
 }
 
 html {
-  background-color: var(--desaturated-red);
+  background: linear-gradient(to bottom, var(--color-strawberry), var(--color-mango));
 }
-
+html::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  image-rendering: pixelated;
+  left: 0;
+  opacity: 0.3;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  /* thanks */
+  background-image: url(data:image/gif;base64,R0lGODlhCgAKAKECADAwMEdHR15eXl5eXiH5BAEKAAIALAAAAAAKAAoAAAIRhB2ZhxoM3GMSykqd1VltzxQAOw==);
+  background-size: 100px 100px;
+  background-position: 0 0, 0 50px, 50px -50px, -50px 0px;
+  animation: scroll 5s linear infinite;
+}
+@keyframes scroll {
+  0% {
+    background-position: 0 0, 0 50px, 50px -50px, -50px 0px;
+  }
+  100% {
+    background-position: 100px 100px, 100px 150px, 150px 50px, 50px 100px;
+  }
+}
 html, body {
   margin: 0;
   color: white;
@@ -31,14 +60,8 @@ body {
   display: flex;
   align-items: center;
   /* justify-content: center; */
+  margin-top: 10vh;
   flex-direction: column;
-  background-image:
-    linear-gradient(45deg, var(--desaturated-yellow) 25%, transparent 25%),
-    linear-gradient(-45deg, var(--desaturated-yellow) 25%, transparent 25%),
-    linear-gradient(45deg, transparent 75%, var(--desaturated-yellow) 75%),
-    linear-gradient(-45deg, transparent 75%, var(--desaturated-yellow) 75%);
-  background-size: 20px 20px;
-  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
 }
 
 button {
@@ -46,7 +69,7 @@ button {
 }
 
 #title {
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
   font-size: 3rem;
   max-width: 650px;
 }
@@ -62,14 +85,14 @@ button {
   & > div {
     border: 0.075em solid white;
     color: white;
-    border-radius: 0.2rem;
-    background-color: black;
+    border-radius: 0.5rem;
+    background-color: rgba(0,0,0,0.5);
     padding: 0.5em 1rem;
     pointer-events: none;
     transition: transform 0.15s ease, background-color 0.1s ease;
   }
   &:hover > div {
-    background-color: #111;
+    background-color: rgb(17, 17, 17, 0.8);
     transform: scale(0.96);
   }
   &:active > div {
@@ -119,11 +142,13 @@ button {
 #footer {
   position: absolute;
   text-align: center;
-  color: gray;
+  color: white;
   bottom: 0;
   margin: 2% auto;
-  & > a {
-    color: gray;
+  & > a:not(.tag) {
+    color: white;
+    margin: 1px;
+    /* background-color: var(--color-mango); */
   }
 }
 
@@ -135,10 +160,10 @@ button {
   text-decoration-color: red;
 }
 #gender {
-  text-decoration-color: green;
+  text-decoration-color: lightgreen;
 }
 #bodypart {
-  text-decoration-color: blue;
+  text-decoration-color: lightskyblue;
 }
 
 .separator {
