added arrow (not 100% accurate rn but at least it's there now)

--- a/css/faces.css
+++ b/css/faces.css
@@ -1,6 +1,7 @@
 /* this is definitely automatable */
 
 article[who]::before {
+  content: "";
   display: block;
   float: left;
   aspect-ratio: 1/1;
