--- a/css/experimental.css
+++ b/css/experimental.css
@@ -78,12 +78,12 @@ body article:last-of-type {
 }
 
 article {
+  position: relative;
   border: 3px solid var(--c1);
   letter-spacing: 3px;
   line-height: 21px;
   background: black;
   padding: 15px;
-  padding-left: 127px;
   color: var(--c1);
   height: fit-content;
   overflow: hidden;
@@ -93,6 +93,34 @@ article {
   min-height: 133px;
   user-select: none;
   word-wrap: break-word;
+  &[who] {
+    padding-left: 127px;
+  }
+}
+
+article::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  aspect-ratio: 5/4;
+  z-index: 1;
+  height: 8px;
+  background: url("/images/misc/next_arrow/next_arrow.png") center/100%;
+  animation: alternate arrow 0.75s steps(2, jump-none) infinite;
+}
+
+@keyframes arrow {
+  0% {
+    bottom: 4px;
+  }
+  50% {
+    bottom: 2px;
+  }
+  100% {
+    bottom: 0;
+  }
 }
 
 .red {
